# codecrafters-shell-rust

./: .gitignore  Cargo.toml  README.md  something.txt
src/: main.rs
src/commands/: builtin_commands.rs  cd.rs  command.rs  command_types.rs  commands.rs  echo.rs  exit.rs  external.rs  history.rs  input.rs  mod.rs  other.rs  pwd.rs  type_.rs
src/streams/: mod.rs  stderr.rs  stdin.rs  stdout.rs
src/util/: args.rs  files.rs  mod.rs
